(refactoring): refactored the remaining services